--- a/css/about.css
+++ b/css/about.css
@@ -14,7 +14,7 @@ a:focus, a:hover { text-decoration: none; color: #191970; }
 
 
 
-.page-header { background: url(../images/Fortuner2.jpg)no-repeat; position: relative; background-size: cover; }
+.page-header { background: url(../images/rentalcar6.jpg)no-repeat; position: relative; background-size: cover; }
 .page-caption { padding-top: 170px; padding-bottom: 174px; }
 .page-title {font-size: 46px;line-height: 1;color: #191970;font-weight: 600;text-align: center;width: 50%;height: 49px;margin: auto;background: #ffffffa6;}
 
